@@ -26,6 +26,9 @@ progDir topdir = topdir
 progDir topdir = topdir </> "bin"
 #endif
 
+extraProgDir :: FilePath -> FilePath
+extraProgDir topdir = topdir </> "extra"
+
 installProg :: FilePath -> FilePath -> IO (FilePath, FilePath)
 installProg dir prog = searchPath prog >>= go
   where
@@ -41,7 +44,9 @@ main = getArgs >>= go
   where
 	go [] = error "specify topdir"
 	go (topdir:_) = do
-		let dir = progDir topdir
-		createDirectoryIfMissing True dir
-		installed <- forM bundledPrograms $ installProg dir
-		writeFile "tmp/standalone-installed" (show installed)
+		installed <- forM
+			[ (progDir topdir, preferredBundledPrograms)
+			, (extraProgDir topdir, extraBundledPrograms) ] $ \(dir, progs) -> do
+			createDirectoryIfMissing True dir
+			forM progs $ installProg dir
+		writeFile "tmp/standalone-installed" (show (concat installed))
