@@ -6,3 +6,5 @@ A solution might be to move the gpg binary to a different directory and put
 it at the end of PATH, not the front. So system one is used if available.
 
 This should also be considered for the linux standalone builds.
+
+> [[done]] for both OSX and linux. --[[Joey]]
