@@ -81,10 +81,10 @@ if [ -z "$GIT_ANNEX_PACKAGE_INSTALL" ]; then
 fi
 
 # Put our binaries first, to avoid issues with out of date or incompatable
-# system binaries.
+# system binaries. Extra binaries come after system path.
 ORIG_PATH="$PATH"
 export ORIG_PATH
-PATH="$base/bin:$PATH"
+PATH="$base/bin:$PATH:$base/extra"
 export PATH
 
 # These env vars are used by the shim wrapper around each binary.
